<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mainActivityEmail"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/email_addressMainActivity"
        android:inputType="textPersonName"
        android:textColorHint="#7e7e7e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mainActivityPassword"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/passwordMainActivity"
        android:inputType="textPersonName"
        android:textColorHint="#7e7e7e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityEmail"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/loginbuttonMainActivity"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:background="@color/teal_700"
        android:text="@string/login_mainActivity"
        android:textColor="@color/white"
        app:backgroundTint="#4267b2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityPassword"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/forgotPwordMainActivity"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:text="@string/forgot_passwordMainActivity"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbuttonMainActivity"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:text="@string/registerMainActivity"
        app:backgroundTint="#39B3EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwordMainActivity"
        app:layout_constraintVertical_bias="0.916" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="35dp"
        android:text="@string/adminmainactivity"
        app:backgroundTint="#39B3EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/registerbutton"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwordMainActivity"
        app:layout_constraintVertical_bias="0.916" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="387dp"
        android:layout_height="194dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosherig" />


</androidx.constraintlayout.widget.ConstraintLayout>